--- a/src/card.css
+++ b/src/card.css
@@ -13,7 +13,8 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: 0 20px 20px 0;
+    padding: 20px;
+    transform: rotate(-90deg);
 }
 
 .card i:hover{
