--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,15 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.appContent{
+  display: flex;
+}
+
+.deck-section{
+  background-color: #303030;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
