--- a/src/card.css
+++ b/src/card.css
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    box-shadow: 11px 11px 12px rgba(0, 0, 0, 0.5);
 }
 
 .card i{
@@ -27,8 +28,8 @@
     text-align: end;
     width: 100%;
     height: 12.5%;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+    border-top-right-radius: 13px;
+    border-top-left-radius: 13px;
     position: absolute;
     top: 0;
     left: 0;
