--- a/src/card.css
+++ b/src/card.css
@@ -25,7 +25,10 @@
 
 .cardHeader{
     background-color: #202020;
-    text-align: end;
+    /* text-align: end; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 12.5%;
     border-top-right-radius: 13px;
@@ -34,7 +37,18 @@
     top: 0;
     left: 0;
     box-sizing: border-box;
-    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.cardHeader .icon{
+    color: #F2F2F2;
+    margin-right: 20px;
+    font-size: 1.25em;
+}
+
+.cardHeader .icon:hover{
+    cursor: pointer;
+    transform: scale(1.25);
 }
 
 .headerText{
