--- a/src/card.css
+++ b/src/card.css
@@ -10,22 +10,22 @@
     box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
 }
 
-.card i{
+#flipIcon{
+    font-size: 2em;
     position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 20px;
-    transform: rotate(-90deg);
+    bottom: 10px;
+    right: 20px;
+    /* padding: 10px; */
+    transition: all 200ms ease-in-out;
 }
 
-.card i:hover{
+#flipIcon:hover{
     cursor: pointer;
 }
 
 
 .cardHeader{
     background-color: #202020;
-    /* text-align: end; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +46,7 @@
     font-size: 1.25em;
 }
 
-.cardHeader .icon:hover{
+.icon:hover{
     cursor: pointer;
     transform: scale(1.25);
 }
