--- a/src/card.css
+++ b/src/card.css
@@ -1,13 +1,35 @@
 .card{
     background-color: #80CBC4;
-    height: 300px;
-    width: 500px;
+    height: 100%;
+    width: 100%;
     border-radius: 15px;
+    position: relative;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
+    transition: transform 500ms ease-in-out;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+}
+
+.card-face:hover{
+    cursor: pointer;
+}
+
+.card-face{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
+}
+
+.card-face-back{
+    transform: rotateY(180deg);
+}
+
+.card.isFlipped{
+    transform: translateX(-100%) rotateY(180deg);
 }
 
 #flipIcon{
@@ -15,7 +37,6 @@
     position: absolute;
     bottom: 10px;
     right: 20px;
-    /* padding: 10px; */
     transition: all 200ms ease-in-out;
 }
 
@@ -34,7 +55,7 @@
     border-top-right-radius: 13px;
     border-top-left-radius: 13px;
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 0;
     box-sizing: border-box;
     padding-left: 20px;
